--- a/Lab/lab3/package.json
+++ b/Lab/lab3/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "install": "^0.13.0",
     "json-server": "^0.17.4",
+    "npm": "^11.8.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0"
